k- created product details page, still some spacing issues

--- a/pub_html/css/flexbox.css
+++ b/pub_html/css/flexbox.css
@@ -98,3 +98,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+/* Product Details Page ////////////////////// */
+.product-details-container{
+  width: 70%;
+  margin: 1rem auto;
+}
